homologacao - feat: Atualizações na segurança da aplicação e tratamentos de algumas exceptions